impl cursor based pagination and first unit test